# rs-clob-client

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-plz.yml
examples/: approvals.rs  bridge.rs  check_approvals.rs  ctf.rs  gamma.rs  rtds_crypto_prices.rs
examples/clob/: async.rs  authenticated.rs  builder_authenticated.rs  streaming.rs
examples/clob/rfq/: quotes.rs  requests.rs
src/: auth.rs  clob.rs  lib.rs  serde_helpers.rs  types.rs
src/bridge/: client.rs  mod.rs
src/bridge/types/: request.rs  response.rs
src/clob/: client.rs  mod.rs  order_builder.rs
src/clob/types/: mod.rs  request.rs  response.rs
src/clob/ws/: client.rs  interest.rs  mod.rs  subscription.rs
src/clob/ws/types/: request.rs  response.rs
src/data/types/: response.rs
src/gamma/types/: response.rs
src/rtds/: client.rs  mod.rs  subscription.rs
src/rtds/types/: request.rs  response.rs
src/ws/: connection.rs  error.rs  mod.rs
tests/: auth.rs  bridge.rs  clob.rs  endpoints.rs  order.rs  rfq.rs  websocket.rs
