[package]
name = "polymarket-client-sdk"
description = "Polymarket CLOB (Central Limit Order Book) API client SDK"
version = "0.3.2"
authors = [
    "Polymarket Engineering <engineering@polymarket.com>",
    "Chaz Byrnes <chaz@polymarket.com>",
]
readme = "README.md"
repository = "https://github.com/polymarket/rs-clob-client"
license = "MIT"
keywords = ["polymarket", "clob", "orderbook", "trading", "prediction-market"]
categories = [
    "api-bindings",
    "cryptography::cryptocurrencies",
    "finance",
    "web-programming::http-client",
]
edition = "2024"
rust-version = "1.88.0" # MSRV

[features]
default = []
data = []
gamma = []
bridge = []
tracing = ["dep:tracing", "dep:serde_ignored"]
ws = ["dep:backoff", "dep:bitflags", "dep:tokio", "dep:tokio-tungstenite"]
rtds = ["dep:backoff", "dep:tokio", "dep:tokio-tungstenite"]

[dependencies]
alloy = { version = "1.2.1", default-features = false, features = [
    "dyn-abi",
    "serde",
    "signers",
    "sol-types"
] }
async-stream = "0.3.6"
async-trait = "0.1.89"
backoff = { version = "0.4.0", optional = true }
base64 = "0.22.1"
bitflags = { version = "2.10.0", optional = true }
bon = "3.8.1"
chrono = { version = "0.4.42", features = ["serde"] }
dashmap = "6.1.0"
futures = "0.3.31"
hmac = "0.12.1"
once_cell = "1.21.3"
phf = { version = "0.13.1", features = ["macros"] }
rand = "0.9.2"
reqwest = { version = "0.12.28", features = ["json"] }
rust_decimal = { version = "1.39.0", features = ["serde"] }
rust_decimal_macros = "1.39.0"
secrecy = { version = "0.10", features = ["serde"] }
serde = "1.0.228"
serde_ignored = { version = "0.1", optional = true }
serde_json = "1.0.148"
serde_repr = "0.1.20"
serde_urlencoded = { version = "0.7.1" }
serde_with = { version = "3.16.1", features = ["chrono_0_4"] }
sha2 = "0.10.9"
strum_macros = "0.27.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"], optional = true }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"], optional = true }
tracing = { version = "0.1", optional = true }
url = "2.5.7"
uuid = { version = "1.19.0", features = ["serde", "v4", "v7"] }

[dev-dependencies]
alloy = { version = "1.2.1", default-features = false, features = [
    "contract",
    "providers",
    "reqwest",
    "signer-aws",
    "signer-local",
] }
anyhow = "1.0.100"
aws-config = "1.8.12"
aws-sdk-kms = "1.97.0"
futures-util = "0.3.31"
httpmock = "0.8.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "async"
path = "examples/clob/async.rs"

[[example]]
name = "authenticated"
path = "examples/clob/authenticated.rs"

[[example]]
name = "aws_authenticated"
path = "examples/clob/aws_authenticated.rs"

[[example]]
name = "builder_authenticated"
path = "examples/clob/builder_authenticated.rs"

[[example]]
name = "streaming"
path = "examples/clob/streaming.rs"

[[example]]
name = "unauthenticated"
path = "examples/clob/unauthenticated.rs"

[[example]]
name = "approvals"
path = "examples/approvals.rs"

[[example]]
name = "data"
path = "examples/data.rs"
required-features = ["data"]

[[example]]
name = "gamma"
path = "examples/gamma.rs"
required-features = ["gamma"]

[[example]]
name = "bridge"
path = "examples/bridge.rs"
required-features = ["bridge"]

[[example]]
name = "websocket_orderbook"
path = "examples/clob/ws/orderbook.rs"
required-features = ["ws"]

[[example]]
name = "websocket_user"
path = "examples/clob/ws/user.rs"
required-features = ["ws"]

[[example]]
name = "rtds_crypto_prices"
path = "examples/rtds_crypto_prices.rs"
required-features = ["rtds"]

[[example]]
name = "websocket_unsubscribe"
path = "examples/clob/ws/unsubscribe.rs"
required-features = ["ws"]

# https://rust-lang.github.io/rust-clippy/master/index.html?versions=lte%3A88
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

allow_attributes = "warn"
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
doc_include_without_cfg = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
exit = "warn"
filetype_is_file = "warn"
float_arithmetic = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
infinite_loop = "warn"
large_include_file = "warn"
let_underscore_untyped = "warn"
map_err_ignore = "warn"
map_with_unused_argument_over_ranges = "warn"
missing_assert_message = "warn"
missing_errors_doc = "allow"
module_name_repetitions = "warn"
multiple_crate_versions = "allow"
multiple_inherent_impl = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
needless_raw_strings = "warn"
non_zero_suggestions = "warn"
pathbuf_init_then_push = "warn"
print_stderr = "warn"
print_stdout = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
similar_names = "allow"
single_char_lifetime_names = "warn"
str_to_string = "warn"
string_add = "warn"
string_slice = "warn"
todo = "warn"
too_many_lines = "allow"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
